<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_movie"
        android:title="@string/movie"
        android:icon="@drawable/ic_movie_black" />

    <item
        android:id="@+id/nav_favorite"
        android:title="@string/favorite"
        android:icon="@drawable/ic_stars_black" />

    <item
        android:id="@+id/nav_about"
        android:title="@string/about"
        android:icon="@drawable/ic_info_black" />
</menu>