<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical">

    <com.google.android.material.tabs.TabLayout
            android:id="@+id/tl_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabIndicatorColor="@color/colorPrimary"
            app:tabTextColor="@color/colorPrimary">

        <com.google.android.material.tabs.TabItem
                android:id="@+id/ti_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie"/>

        <com.google.android.material.tabs.TabItem
                android:id="@+id/ti_tv_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_show"/>
    </com.google.android.material.tabs.TabLayout>

    <FrameLayout
            android:id="@+id/fl_movie"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
</LinearLayout>
